--- a/NEW PORTFOLIO.html
+++ b/NEW PORTFOLIO.html
@@ -6,14 +6,8 @@
  initial-scale=1">
  <meta property="og:type" content="video">
 <meta property="og:title" content="vtrend">
-<meta property="og:url" content="">
-<meta property="og:image" content="file:///C:/Users/HP/Desktop/image/xelent%20mock%20up.jpg">
+<meta property="og:image" content="file:image/xelent%20mock%20up.jpg">
 <meta property="video:release_date" content="2023-04-24">
-<meta property="video:tag" content="">
-<meta property="video:actor" content="">
-<meta property="video:director" content="">
-<meta property="video:writer" content="">
- <link rel="stylesheet" type="text/css" href="loder.html" id="loader">
  <link rel="stylesheet" type="text/css" href="headtxt.html">
  <link rel="stylesheet" type="text/css" href="C:\Users\HP\Desktop\11\headtxt.html">
 	<title>NEW PORTFOLIO</title>
